# Cours-passerelle

./: .gitignore
BDD/: report.tex
BDD/modele/: report.tex
BDD/site/: ULg.sql  config.php  finish_contract.php  global_search.php  index.php  new_contract.php  search_id.php  signin.php  vehicule_availability.php
Compilateur/: coda.cabal  grammar.ebnf  quicksort.coda  report_compiler.tex  report_grammar.tex  report_parser.tex
Compilateur/examples/: Makefile  coda.h  game_of_life.c  game_of_life.coda  quicksort.c  quicksort.coda
Compilateur/src/Language/: Coda.hs
Compilateur/src/Language/Coda/: AST.hs  Checker.hs  CodeGen.hs  GAST.hs  Parser.hs  Preprocessor.hs
Computation Structures/: Ulg01Assembler.hs
Computation structures/TP01/: ImageGenerator.hs  ImageGenerator.x64  demo.asm  floodfill.asm  main.asm
Computation structures/TP02/: Makefile  labyrinth.c  labyrinth.h  labyrinthe.c  labyrinthe.h  main.c  rapport.tex  report.tex  schema_conflit.eps  schema_partages.eps  schema_performances.eps
Ingenierie/ChatServer/: build.xml
Ingenierie/report/: diagrams.xmi  report.tex
Operating system/: report.tex
Operating_System/: group0xd.patch  group0xd_nocache.patch
POO/: Formula.java
Programmation fonctionnelle/: examen.scm
Programmation fonctionnelle/project_euler/: 47.scm  48.scm  euler_utils.scm
Programmation recursive/: TP1.pl  TP2.pl  TP3.pl  TP4.pl  bell.pl  tp1.pl  tp2.pl  tp3.pl  tp4.pl  tp5.pl
Programming techniques/life/: Readme  report.tex
Programming techniques/polygon/: Makefile  Polygon.hs  main.c  (+5 more)
Projets de programmation/: pmli
(+128 files in other folders)
